; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/api/core/extr_esp_ble_mesh_networking_api.c_esp_ble_mesh_model_msg_opcode_init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/api/core/extr_esp_ble_mesh_networking_api.c_esp_ble_mesh_model_msg_opcode_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_ble_mesh_model_msg_opcode_init(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  store i32 %10, i32* %3, align 4
  br label %42

11:                                               ; preds = %2
  %12 = load i32, i32* %5, align 4
  %13 = icmp slt i32 %12, 256
  br i1 %13, label %14, label %20

14:                                               ; preds = %11
  %15 = load i32, i32* %5, align 4
  %16 = and i32 %15, 255
  %17 = load i32*, i32** %4, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 0
  store i32 %16, i32* %18, align 4
  %19 = load i32, i32* @ESP_OK, align 4
  store i32 %19, i32* %3, align 4
  br label %42

20:                                               ; preds = %11
  %21 = load i32, i32* %5, align 4
  %22 = icmp slt i32 %21, 65536
  br i1 %22, label %23, label %29

23:                                               ; preds = %20
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @sys_cpu_to_be16(i32 %24)
  store i32 %25, i32* %6, align 4
  %26 = load i32*, i32** %4, align 8
  %27 = call i32 @memcpy(i32* %26, i32* %6, i32 2)
  %28 = load i32, i32* @ESP_OK, align 4
  store i32 %28, i32* %3, align 4
  br label %42

29:                                               ; preds = %20
  %30 = load i32, i32* %5, align 4
  %31 = ashr i32 %30, 16
  %32 = and i32 %31, 255
  %33 = load i32*, i32** %4, align 8
  %34 = getelementptr inbounds i32, i32* %33, i64 0
  store i32 %32, i32* %34, align 4
  %35 = load i32, i32* %5, align 4
  %36 = and i32 %35, 65535
  %37 = call i32 @sys_cpu_to_le16(i32 %36)
  store i32 %37, i32* %6, align 4
  %38 = load i32*, i32** %4, align 8
  %39 = getelementptr inbounds i32, i32* %38, i64 1
  %40 = call i32 @memcpy(i32* %39, i32* %6, i32 2)
  %41 = load i32, i32* @ESP_OK, align 4
  store i32 %41, i32* %3, align 4
  br label %42

42:                                               ; preds = %29, %23, %14, %9
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local i32 @sys_cpu_to_be16(i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @sys_cpu_to_le16(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
